<resources>
    <string name="app_name">LyahLaundry</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="not_a_member_register">Not a Member? Register</string>
    <string name="password_not_matching">Password not matching</string>
    <string name="phone_number_cannot_be_empty">Phone number cannot be empty</string>
    <string name="address_cannt_be_empty">Address cannot be empty</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>






    <string name="map_key">AIzaSyDpoG59co7marT87Z0poo-GeqD0h4BTE3c</string>
    <string name="assign_to">Assign To</string>
</resources>
